--- a/.github/workflows/djangoCI.yml
+++ b/.github/workflows/djangoCI.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        python-version: ["3.10", "3.11"]
 
     steps:
     - uses: actions/checkout@v4
@@ -30,4 +30,4 @@ jobs:
         python manage.py test
     - name: Start Application
       run: |
-        python manage.py runserver 
+        python manage.py runserver 0.0.0.0:8000 &
